// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app/ProfileFilterNavigator renders ProfileFilterNavigator properly 1`] = `
<ol
  class="filterNavigatorBar profileFilterNavigator"
>
  <li
    class="filterNavigatorBarItem filterNavigatorBarRootItem filterNavigatorBarSelectedItem filterNavigatorBarLeafItem"
  >
    <span
      class="filterNavigatorBarItemContent"
    >
      <span
        class="profileFilterNavigator--tab-selector"
      >
        Full Range (⁨51ms⁩)
      </span>
    </span>
  </li>
</ol>
`;

exports[`app/ProfileFilterNavigator renders ProfileFilterNavigator properly 2`] = `
<ol
  class="filterNavigatorBar profileFilterNavigator"
>
  <li
    class="filterNavigatorBarItem filterNavigatorBarRootItem"
  >
    <button
      class="filterNavigatorBarItemContent"
      type="button"
    >
      <span
        class="profileFilterNavigator--tab-selector disabled"
      >
        Full Range (⁨51ms⁩)
      </span>
    </button>
  </li>
  <li
    class="filterNavigatorBarItem filterNavigatorBarSelectedItem filterNavigatorBarLeafItem filterNavigatorBarTransition-enter filterNavigatorBarTransition-enter-active"
  >
    <span
      class="filterNavigatorBarItemContent"
    >
      40ms
    </span>
  </li>
</ol>
`;

exports[`app/ProfileFilterNavigator renders ProfileFilterNavigator properly 3`] = `
<ol
  class="filterNavigatorBar profileFilterNavigator"
>
  <li
    class="filterNavigatorBarItem filterNavigatorBarRootItem"
  >
    <button
      class="filterNavigatorBarItemContent"
      type="button"
    >
      <span
        class="profileFilterNavigator--tab-selector disabled"
      >
        Full Range (⁨51ms⁩)
      </span>
    </button>
  </li>
  <li
    class="filterNavigatorBarItem filterNavigatorBarSelectedItem filterNavigatorBarLeafItem filterNavigatorBarTransition-enter filterNavigatorBarTransition-enter-active"
  >
    <button
      class="filterNavigatorBarItemContent"
      type="button"
    >
      40ms
    </button>
  </li>
  <li
    class="filterNavigatorBarItem filterNavigatorBarUncommittedItem filterNavigatorBarLeafItem filterNavigatorBarUncommittedTransition-enter filterNavigatorBarUncommittedTransition-enter-active"
    title="100μs"
  >
    <span
      class="filterNavigatorBarItemContent"
    >
      100μs
    </span>
  </li>
</ol>
`;

exports[`app/ProfileFilterNavigator renders the site hostname as its first element in the single tab view 1`] = `
<ol
  class="filterNavigatorBar profileFilterNavigator"
>
  <li
    class="filterNavigatorBarItem filterNavigatorBarRootItem filterNavigatorBarSelectedItem filterNavigatorBarLeafItem"
  >
    <span
      class="filterNavigatorBarItemContent"
    >
      <span
        class="profileFilterNavigator--tab-selector"
      >
        Full Range (⁨51ms⁩)
      </span>
    </span>
  </li>
</ol>
`;
